deploying 62testcase pass

--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["nxtmart/src/App.js","nxtmart/src/pages/Login/index.js","nxtmart/src/pages/Home/index.js","nxtmart/src/components/ProductItem/index.js"],"fileToBeOpened":"nxtmart/src/pages/Cart/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["nxtmart/src/pages/Login/index.js"],"fileToBeOpened":"nxtmart/src/components/HomeProductItem/style.css"}
